refactor: code
Signed-off-by: Mustafa Uzun <mustafa.uzun@limechain.tech>